.kube/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app-jenkins
  labels:
    app.kubernetes.io/name: spring-app-jenkins
    app.kubernetes.io/component: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: spring-app-jenkins
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spring-app-jenkins
        app.kubernetes.io/component: web
    spec:
      imagePullSecrets:
        - name: req-secret
      containers:
        - name: spring-app-jenkins
          image: irovetskyi/gcp-simple-spring-microservice:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http

#          env:
#            - name: DATABASE_URL
#              value: postgresql://postgres:gYwOKJZaR0do8TUUgPS9@pg:5432/postgres
