.kube/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-spring-app-service
  labels:
    app: simple-spring-app-kube
spec:
  type: LoadBalancer
  selector:
    app:
      app: simple-spring-app-kube
  ports:
    - protocol: TCP
      port: 8080
      name: http
      targetPort: http
