.kube/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-spring-app
  labels:
    app.kubernetes.io/name: simple-spring-app
    app.kubernetes.io/component: web
spec:
  rules:
#    - host: ktswebinar.ktsdev.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-spring-app
                port:
                  name: http
